--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,22 @@
   {{#unless environment.production}}
   <script src="/ember-cli-live-reload.js" type="text/javascript"></script>
   {{/unless}}
+  
+  <script src="//www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyABAH3Bgz3d3HWvOsoxNVNHA8R0wDVbbQM",
+      authDomain: "acrogame.firebaseapp.com",
+      databaseURL: "https://acrogame.firebaseio.com",
+      storageBucket: "project-8507993114432601486.appspot.com",
+    };
+    // Go!
+    firebase.initializeApp(config);
+  </script>
+  
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
