--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     
     <base href="/">
     
-    <title>AcroClient</title>
+    <title>Acro</title>
 
     {{#unless environment.production}}
     <script src="/ember-cli-live-reload.js" type="text/javascript"></script>
